feat: storing state in localStorage

--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -39,8 +39,8 @@ div.todo-item-checkbox > input[type="checkbox"] {
   content: "";
   display: none;
   position: relative;
-  left: 20px;
-  top: 6px;
+  left: 0.65em;
+  top: 0.2em;
   width: 0.7em;
   height: 1.3em;
 }
