--- a/src/Components/List/List.scss
+++ b/src/Components/List/List.scss
@@ -1,4 +1,7 @@
 .todo-list {
-  width: 600px;
+  width: 768px;
   margin: auto;
+  @media only screen and (max-width: 768px) {
+    width: 100%;
+  }
 }
