--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -5,7 +5,7 @@
   border-radius: 0.5em;
   display: grid;
   gap: 0px 0px;
-  grid-template-columns: 2em calc(100% - 2em);
+  grid-template-columns: 2em calc(100% - 4em) 2em;
   margin: 0.5em;
   padding: 0.5em;
   box-shadow: 2px 2px 5px 2px rgb(0 0 0 / 50%);
@@ -62,4 +62,22 @@ div.todo-item-checkbox > input[type="checkbox"] {
   justify-content: left;
   text-align: left;
   padding: 0 0.5em;
+}
+
+.todo-item-delete {
+  align-items: center;
+  display: flex;
+  height: 2em;
+  justify-content: center;
+  width: 2em;
+}
+
+.todo-item-delete > * {
+  color: $nord3;
+  transition-duration: 0.3s;
+  cursor: pointer;
+}
+
+.todo-item-delete > *:hover {
+  color: $nord11;
 }
